# stowr

./: Cargo.toml  README.md  setup.sh
book/: book.toml
book/src/: SUMMARY.md  index.md
book/src/crates/: gui.md  tui.md
crates/app/: Cargo.toml  Dioxus.toml
crates/app/src/: main.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: asset.rs  auth.rs  common.rs  error.rs  lib.rs  location.rs
crates/core/src/domain/: mod.rs
crates/core/src/domain/asset/: api.rs  logic.rs  mod.rs  model.rs  tests.rs
crates/core/src/domain/location/: api.rs  logic.rs  mod.rs  model.rs  tests.rs
crates/core/src/domain/shared/: db.rs
crates/core/src/shared/: logger.rs  mod.rs
crates/gui/: Cargo.toml  Dioxus.toml
crates/gui/assets/: main.css
crates/gui/src/: main.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/macro/tests/: ui.rs
crates/macro/tests/ui/: 01-domain.rs  02-domain-impl.rs
crates/tui/: .envrc  Cargo.toml  LICENSE  README.md
crates/tui/.github/workflows/: cd.yml
crates/tui/src/: config.rs
