[package]
name = "stowr-core"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["test-util", "macros"] }
stowr-macro = { path = "../macro" }

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.uuid]
version = "1.17.0"
features = ["v4", "serde"]
